test/corpus/application.txt
====
Application
====
(+ 1 1)
(print "hello world")
((a))
----
(program
    (application
        function: (symbol)
        arg: (number)
        arg: (number))
    (application
        function: (symbol)
        arg: (string))
    (application
        function: (application
            function: (symbol))))
