test/corpus/functions.txt
=========
Functions
=========
(defun greet (msg) (print "hello" msg))
(def test 1)
(define a 1)
------

(program
    (function_definition 
        name: (symbol)
        args: (arglist (symbol))
        body: (application
            function: (symbol) 
            arg: (string)
            arg: (symbol)))
    
    (definition name: (symbol) value: (number))
    (definition name: (symbol) value: (number)))
