test/corpus/quoting.txt
=======
Quoting
=======
'a
'(1)
'(a (b c))
----
(program
  (quote (symbol))
  (quote (quoted_list (number)))
  (quote 
      (quoted_list 
        (symbol) 
        (quoted_list (symbol) (symbol)))))
