test/corpus/simple.txt
==================
Simple program
==================
(print "hello" (+ nil 1) 1234 't)
---

(program
    (application
        (symbol)
        (string)
        (application
            (symbol)
            (constant_symbol)
            (number))
        (number)
        (quote
            (constant_symbol))))
